trying to fix left-alignment of code blocks

--- a/res/wrap/wrap.css
+++ b/res/wrap/wrap.css
@@ -386,7 +386,7 @@ p.lbox {
   margin: 10px;
 }
 
-code {
+div.highlighter-rouge {
   margin-left: 40px;
 }
 
